--- a/README
+++ b/README
@@ -1,3 +1,6 @@
 A first pass at sharing my bash environment
 
-This is primarily a bash environment for people using OS X
+# Instalation
+1. Put this folder anywhere
+2. Add a symbolic link from your home folder to the bash_profile file in this directory
+    ln -s /path/to/this/folder/best-bash/bash_profile /home/username/.bash_profile
